Added list activity; some more stories to read

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,9 +13,17 @@
             android:name=".SmartUpActivity"
             android:label="@string/app_name" >
             <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <!--<category android:name="android.intent.category." />-->
+            </intent-filter>
+        </activity>
+        
+        <activity 
+            android:name=".SelectTextActivity" 
+            android:label="@string/pick_text" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER" />               
             </intent-filter>
         </activity>
     </application>
