--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name" android:debuggable="true" >
         <activity
             android:name=".SmartUpActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <!--<category android:name="android.intent.category." />-->
@@ -20,7 +21,8 @@
         
         <activity 
             android:name=".SelectTextActivity" 
-            android:label="@string/pick_text" >
+            android:label="@string/pick_text"
+            android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />               
